# docs/api/openapi.json
@@ -3632,7 +3632,7 @@
         }
       }
     },
-    "/api/settings/webhooks-api-key": {
+    "/api/settings/webhooks-api-keys": {
       "get": {
         "tags": [
           "Settings"
@@ -3643,46 +3643,73 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/WebhooksApiKeyStatusDto"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/WebhookApiKeyDto"
+                  }
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/WebhooksApiKeyStatusDto"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/WebhookApiKeyDto"
+                  }
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/WebhooksApiKeyStatusDto"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/WebhookApiKeyDto"
+                  }
                 }
               }
             }
           }
         }
-      }
-    },
-    "/api/settings/webhooks-api-key/generate": {
+      },
       "post": {
         "tags": [
           "Settings"
         ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateWebhookApiKeyRequestDto"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateWebhookApiKeyRequestDto"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateWebhookApiKeyRequestDto"
+              }
+            }
+          },
+          "required": true
+        },
         "responses": {
           "200": {
             "description": "OK",
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/WebhooksApiKeyGenerateResponseDto"
+                  "$ref": "#/components/schemas/CreateWebhookApiKeyResponseDto"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/WebhooksApiKeyGenerateResponseDto"
+                  "$ref": "#/components/schemas/CreateWebhookApiKeyResponseDto"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/WebhooksApiKeyGenerateResponseDto"
+                  "$ref": "#/components/schemas/CreateWebhookApiKeyResponseDto"
                 }
               }
             }
@@ -3690,10 +3717,25 @@
         }
       }
     },
-    "/api/settings/webhooks-api-key/revoke": {
-      "post": {
+    "/api/settings/webhooks-api-keys/{id}": {
+      "delete": {
         "tags": [
           "Settings"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "pattern": "^-?(?:0|[1-9]\\d*)$",
+              "type": [
+                "integer",
+                "string"
+              ],
+              "format": "int32"
+            }
+          }
         ],
         "responses": {
           "200": {
@@ -5144,6 +5186,46 @@
             "items": {
               "$ref": "#/components/schemas/CreateStudyProgramCourseDto"
             }
+          }
+        }
+      },
+      "CreateWebhookApiKeyRequestDto": {
+        "required": [
+          "name"
+        ],
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          }
+        }
+      },
+      "CreateWebhookApiKeyResponseDto": {
+        "required": [
+          "id",
+          "name",
+          "apiKey",
+          "createdAt"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "pattern": "^-?(?:0|[1-9]\\d*)$",
+            "type": [
+              "integer",
+              "string"
+            ],
+            "format": "int32"
+          },
+          "name": {
+            "type": "string"
+          },
+          "apiKey": {
+            "type": "string"
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time"
           }
         }
       },
@@ -7483,36 +7565,27 @@
           }
         }
       },
-      "WebhooksApiKeyGenerateResponseDto": {
+      "WebhookApiKeyDto": {
         "required": [
-          "apiKey",
+          "id",
+          "name",
           "createdAt"
         ],
         "type": "object",
         "properties": {
-          "apiKey": {
+          "id": {
+            "pattern": "^-?(?:0|[1-9]\\d*)$",
+            "type": [
+              "integer",
+              "string"
+            ],
+            "format": "int32"
+          },
+          "name": {
             "type": "string"
           },
           "createdAt": {
             "type": "string",
-            "format": "date-time"
-          }
-        }
-      },
-      "WebhooksApiKeyStatusDto": {
-        "required": [
-          "hasKey"
-        ],
-        "type": "object",
-        "properties": {
-          "hasKey": {
-            "type": "boolean"
-          },
-          "createdAt": {
-            "type": [
-              "null",
-              "string"
-            ],
             "format": "date-time"
           }
         }
